feat(api): add endpoint to assign and remove card members
- Add REST endpoint to assign members to a card
- Add REST endpoint to removed members from a card
- Create methods in services to add and remove member for cards
- Create required Data Transfer Objects